@@ -1,38 +1,64 @@
 package ru.epicprojects.localities.utils;
 
-import jakarta.persistence.EntityNotFoundException;
+import lombok.extern.slf4j.Slf4j;
 import ru.epicprojects.localities.dao.AssistanceEntity;
+import ru.epicprojects.localities.dao.AttractionCompositeAK;
 import ru.epicprojects.localities.dao.AttractionEntity;
-import ru.epicprojects.localities.dao.LocalityEntity;
+import ru.epicprojects.localities.dto.AssistanceDTO;
 import ru.epicprojects.localities.dto.AttractionDTO;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+/**
+ * Вспомогательный класс для преобразования DTO и сущностями
+ * достопримечательностей.
+ */
+@Slf4j
 public class AttractionUtil {
 
-    public static AttractionEntity fromDTO(AttractionDTO attractionDTO){
+    /**
+     * Преобразует объект DTO {@link AttractionDTO} в сущность {@link AttractionEntity}.
+     *
+     * @param attractionDTO объект DTO, представляющий достопримечательность
+     * @return сущность достопримечательности, соответствующая переданному DTO
+     */
+    public static AttractionEntity toEntity(AttractionDTO attractionDTO){
+        log.debug("Converting AttractionDTO to AttractionEntity: {}", attractionDTO);
         AttractionEntity entity = new AttractionEntity();
-        entity.setName(attractionDTO.getName());
-        entity.setCreatedAt(attractionDTO.getCreatedAt());
+        AttractionCompositeAK ak = new AttractionCompositeAK();
+        ak.setName(attractionDTO.getName());
+        entity.setAttractionCompositeAK(ak);
         entity.setShortDescription(attractionDTO.getShortDescription());
         entity.setType(attractionDTO.getType());
+
+        List<AssistanceEntity> assistances = Collections.emptyList();
+        if(attractionDTO.getAssistances() != null)
+                assistances = attractionDTO.getAssistances().stream().map(AssistanceUtil::toEntity).toList();
+        entity.setAssistances(assistances);
+        log.debug("Converted to AttractionEntity: {}", entity);
         return entity;
     }
 
-    public static AttractionDTO fromEntity(AttractionEntity attractionEntity){
+    /**
+     * Преобразует сущность {@link AttractionEntity} в объект DTO {@link AttractionDTO}.
+     *
+     * @param attractionEntity сущность аттракции для преобразования
+     * @return объект DTO, представляющий аттракцию
+     */
+    public static AttractionDTO toDTO(AttractionEntity attractionEntity){
+        log.debug("Converting AttractionEntity to AttractionDTO: {}", attractionEntity);
         AttractionDTO attractionDTO = new AttractionDTO();
-        attractionDTO.setName(attractionEntity.getName());
+        attractionDTO.setName(attractionEntity.getAttractionCompositeAK().getName());
         attractionDTO.setType(attractionEntity.getType());
-        attractionDTO.setId(attractionEntity.getId());
         attractionDTO.setCreatedAt(attractionEntity.getCreatedAt());
-        attractionDTO.setLocalityId(attractionEntity.getLocality().getId());
-
-        List<Long> assistanceIds = attractionEntity.getAssistances().stream()
-                .map((assistanceEntity) -> assistanceEntity.getId())
-                .collect(Collectors.toList());
-        attractionDTO.setAssistanceIds(assistanceIds);
+        attractionDTO.setShortDescription(attractionEntity.getShortDescription());
+        List<AssistanceDTO> assistances = Collections.emptyList();
+        if(attractionEntity.getAssistances() != null)
+            assistances = attractionEntity.getAssistances().stream().map(AssistanceUtil::toDTO).toList();
+        attractionDTO.setAssistances(assistances);
+        log.debug("Converted to AttractionDTO: {}", attractionDTO);
         return attractionDTO;
     }
 }
